# upflow

./: Cargo.toml  README.md  publish.sh  temp.rs
src/: context.rs  engine.rs  error.rs  lib.rs  model.rs  prelude.rs
src/context/: mod.rs
src/core/: constants.rs  enums.rs  mod.rs
src/engine/: engine.rs  event_bus.rs  events.rs  graph.rs  group_extractor.rs  mod.rs  runtime.rs  scheduler.rs
src/executor/: mod.rs
src/graph/: mod.rs
src/model/: context.rs  error.rs  event.rs  mod.rs  node_trait.rs  state.rs  workflow.rs
src/models/: actor_message.rs  context.rs  error.rs  event.rs  event_bus.rs  mod.rs  workflow.rs
src/nodes/: assign.rs  case.rs  decision.rs  end.rs  executor.rs  group_node.rs  iteration.rs  loop.rs  mod.rs  node_trait.rs  start.rs  start_node.rs  subflow.rs  subflow_node.rs  switch_node.rs
src/registry/: mod.rs  node_registry.rs  workflow_registry.rs
src/utils/: id.rs  mod.rs  resolver.rs
tests/: branch_workflow_test.rs  cancellation_test.rs  code_workflow_test.rs  conditional_join_test.rs  event_listener_test.rs  example_workflow.json  flow_test.rs  group_workflow_test.rs  integration.rs  integration_test.rs  parallel_join_test.rs  parallel_workflow_test.rs  proactive_cancellation_test.rs  production_flow.rs  scheduler.rs  simple_workflow_test.rs  single_flow.json  validation_test.rs  workflow.rs
tests/resources/: branch_workflow.json  code_workflow.json  complex_parallel_workflow.json  flow.json  group_workflow.json  main_flow.json  parallel_workflow.json  simple_workflow.json  simple_workflow1.json  subflow.json
