[package]
name = "uflow"
version = "0.1.0"
edition = "2024"
description = "workflow"
license = "Apache-2.0"
repository = "https://github.com/uporm/uflow"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
thiserror = "2.0.17"
uuid = { version = "1.7", features = ["v4"] }
async-trait = "0.1.89"
log = "0.4.29"