[package]
name = "upflow"
version = "0.2.1"
edition = "2024"
description = "An asynchronous workflow engine based on DAG"
license = "Apache-2.0"
repository = "https://github.com/uporm/upflow"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
petgraph = "0.8.3"
dashmap = "7.0.0-rc2"
regex = "1.12.2"
serde_json = "1.0.149"
thiserror = "2.0.18"
sonyflake = "0.4.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"
sha2 = "0.10.9"
hex = "0.4.3"
